add final details

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="/scripts/labyrinth.js"></script>
     <script src="/scripts/game.js"></script>
     <script src="/scripts/script.js"></script>
-    <title>Document</title>
+    <title>Project 1</title>
   </head>
   <body>
     <canvas width="750" height="750" id="game"></canvas>
